src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_arith/modulo_1_bool.deca
// Description :
//    test modulo entre un 1 et un bool
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) les opérandes d’un modulo doivent être de type ‘int’
class A{}
{
A a = new A();
int c = 1 % true;
}

